# spec-review-kanban

./: AGENTS.md  Cargo.toml  package.json  pnpm-lock.yaml
aicodex/: .gitignore  Cargo.toml  Dockerfile
aicodex-web/: .gitignore  Dockerfile  README.md  index.html  nginx.conf  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  vite.config.js  vite.config.ts  vitest.config.ts
aicodex-web/e2e/: language.spec.ts  navigation.spec.ts  theme.spec.ts
aicodex-web/src/: App.vue  main.ts
aicodex-web/src/composables/: index.ts  useAuth.ts  useExecution.ts  useInstances.ts  useLocale.ts  useProjects.ts  useReviews.ts  useSettingsDraft.ts  useTasks.test.ts  useTasks.ts  useTheme.test.ts  useTheme.ts  useUsers.ts  useWorkspaces.ts
aicodex-web/src/directives/: clickOutside.ts
aicodex-web/src/i18n/: en-US.ts  index.ts  zh-CN.ts
aicodex-web/src/lib/: api.ts  queryClient.ts  websocket.ts
aicodex-web/src/pages/: Dashboard.vue  LoginPage.vue  NotFound.vue  ProjectTasks.vue  RepoMappings.vue  ReviewDetail.vue  ReviewList.vue  Settings.vue  Tasks.vue
aicodex-web/src/router/: index.ts
aicodex-web/src/stores/: auth.ts  index.ts  projects.ts  tasks.ts  theme.ts  ui.ts
aicodex-web/src/styles/: base.css  variables.css
aicodex-web/src/types/: index.ts  settings.ts
aicodex/docs/: MULTI_INSTANCE_GUIDE.md
aicodex/migrations/: 20260120000000_init.sql  20260121000001_multi_instance_management.sql  20260121000002_instance_error_tracking.sql
aicodex/scripts/: start-dev.sh
aicodex/src/: config.rs  error.rs  main.rs
aicodex/src/db/: mod.rs
aicodex/src/db/models/: instance_ai_agent.rs  instance_usage_stats.rs  mod.rs  repo_mapping.rs  review_event.rs  review_run.rs  system_config.rs  user.rs  user_instance_assignment.rs  user_session.rs  vibe_instance.rs  webhook_audit.rs
aicodex/src/middleware/: auth.rs  mod.rs
aicodex/src/routes/: auth.rs  config.rs  instances.rs  mod.rs  my_instances.rs  proxy.rs  repo_mappings.rs  reviews.rs  users.rs  webhooks.rs
aicodex/src/services/: agent_config_manager.rs  config_service.rs  encryption.rs  gitea_client.rs  instance_manager.rs  mod.rs  review_service.rs  user_manager.rs  vibe_client.rs  webhook_handler.rs
crates/remote/src/: lib.rs  main.rs
crates/review/: Cargo.toml
crates/review/src/: main.rs
crates/server/src/: main.rs
crates/utils/: Cargo.toml
crates/utils/src/: assets.rs  lib.rs
docker/: .env.aicodex.example  docker-compose.aicodex.yml  nginx.aicodex.conf
openspec/changes/add-logging-system/: design.md  proposal.md  tasks.md
(+85 files in other folders)
