[package]
name = "aicodex"
version = "0.1.0"
edition = "2021"
description = "独立的代码审核服务，与 Vibe Kanban 集成"

[[bin]]
name = "aicodex"
path = "src/main.rs"

[[bin]]
name = "create-admin"
path = "src/bin/create_admin.rs"

[dependencies]
# Web 框架
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["typed-header", "cookie"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

# 异步运行时
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures-util = "0.3"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 数据库
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }

# HTTP 客户端
reqwest = { version = "0.12", features = ["json", "stream"] }

# 加密
aes-gcm = "0.10"
rand = "0.9"
base64 = "0.22"

# 密码和认证
argon2 = "0.5"
jsonwebtoken = "9"

# 进程管理 (Unix)
nix = { version = "0.29", features = ["signal"] }

# 异步 trait
async-trait = "0.1"

# 工具
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
hex = "0.4"
hmac = "0.12"
dotenvy = "0.15"

# 内部 crate
utils = { path = "../crates/utils" }

[dev-dependencies]
tokio-test = "0.4"
